--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Patatap Clone</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script type="text/javascript" src="/js/libs/paper-full.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script type="text/javascript" src="./js/libs/paper-full.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.js"></script>
 
     <script type="text/paperscript" canvas="myCanvas">
